# ocaml-machine-learning

./: README.md  dune-project  ocaml-machine-learning.opam
benchmark/: dune  xorBackendBenchmark.ml
lib/: activationFunction.ml  activationFunction.mli  appleGpuTwoLayerNetwork.ml  appleGpuTwoLayerNetwork.mli  appleGpuTwoLayerNetworkKernels.metal  appleGpuTwoLayerNetwork_stubs.c  computeBackend.ml  computeBackend.mli  dune  trainingExample.ml  trainingExample.mli  twoLayerNeuralNetwork.ml  twoLayerNeuralNetwork.mli  xorTraining.ml  xorTraining.mli
test/: dune  xorTrainingTest.ml
