(lang dune 3.22)
(name ocaml-machine-learning)
(generate_opam_files true)

(package
 (authors "Fuwn <contact@fuwn.net>")
 (bug_reports "https://github.com/Fuwn/ocaml-machine-learning/issues")
 (description "A collection of machine learning examples in OCaml")
 (depends
  (ocaml (>= 5.4))
  dune)
 (homepage "https://github.com/Fuwn/ocaml-machine-learning")
 (license "MIT" "Apache-2.0")
 (maintainers "Fuwn <contact@fuwn.net>")
 (name ocaml-machine-learning)
 (synopsis "Machine learning examples in OCaml"))
